# This file will be processed with automake-1.7 to create Makefile.in

AUTOMAKE_OPTIONS = 1.7

dist_man1_MANS =			\
		ipa-getkeytab.1		\
		ipa-rmkeytab.1		\
		ipa-client-install.1	\
		ipa-client-automount.1	\
		ipa-client-samba.1	\
		ipa-certupdate.1	\
		ipa-join.1		\
		ipa.1

dist_man5_MANS =			\
		default.conf.5
