NULL =

appdir = $(IPA_DATA_DIR)/client
dist_app_DATA =				\
	freeipa.template		\
	sshd_ipa.conf.template	\
	ssh_ipa.conf.template	\
	$(NULL)

epnconfdir = $(IPA_SYSCONF_DIR)
dist_epnconf_DATA =			\
	epn.conf			\
	$(NULL)

epntemplatedir = $(IPA_SYSCONF_DIR)/epn
dist_epntemplate_DATA =			\
	expire_msg.template	\
	$(NULL)
